--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
     "cookies-parser": "^1.2.0",
@@ -20,7 +21,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^15.15.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
